# anymal_science_robotics_supplementary

./: README.md
actuator_model/: ReadMe  genIndexVariables.m  generateLearningData.m  getFilenameFromNumber.m  loadLogFile.m  plot_highspeed.m  plot_validation.m  plot_walk.m  processData.m  run.eps  run1.eps  validation.eps  walk0.eps  walk1.eps
actuator_model/data/: seaModelValidate_highspeed.txt  seaModelValidate_output0.txt  seaModelValidate_output1.txt  seaModelValidate_walk.txt
environments/:  readMe  CMakeLists.txt
environments/applications/self_righting/: anymal_self_righting.cpp  test_self_righting.cpp
environments/applications/walk/: anymal_walk.cpp  test_walk.cpp
environments/data/: seaModel_10000.txt  seaModel_20000.txt  seaModel_6.txt
environments/data/controller/: ReadMe  jemin_locomotion.txt  jemin_locomotion1.txt  jemin_locomotion2.txt  jemin_locomotion3.txt  jemin_side0.txt  jemin_side1.txt  master_100.txt  master_150.txt  master_50.txt  master_500.txt  recovery_policy_0.txt  running0.txt  standing_policy_1700.txt  standing_policy_2300.txt  standing_policy_3000.txt  standing_policy_4000.txt  standing_policy_4100.txt  standing_policy_5600.txt  walking_policy_07.txt  walking_policy_07_2.txt  walking_policy_5.txt
environments/task/include/quadrupedLocomotion/: ANYmal_full_collision.hpp  ANYmal_minimal.hpp
environments/task/include/quadrupedLocomotion/model/: anymal_bear_standard.urdf  robot_minimal.urdf  robot_nofan_nolimit.urdf
